cabal-version:      2.4
name:               MetaLambda
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             damhiya
maintainer:         damhiya@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable MetaLambda
    main-is:          Main.hs
    other-modules:
      Syntax
      Typing
      Reduction.Substitution
      Reduction.Evaluation
      Parser.Syntax
      Parser.Lexer
      Parser.Parser
      PrettyPrinter

    build-depends:    base ^>=4.14.3.0, containers, text, megaparsec, Earley, prettyprinter, haskeline
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings LambdaCase
