cabal-version:      2.4
name:               MetaLambda
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Contextual Modal Type Theory

-- A longer description of the package.
description:        Implementation of Contextual Modal Type Theory[Nanevski et. al. 2008]

-- A URL where users can report bugs.
bug-reports:        https://github.com/damhiya/MetaLambda

-- The license under which the package is released.
license:            BSD-3-Clause
license-file:       LICENSE
author:             damhiya
maintainer:         damhiya@gmail.com

-- A copyright notice.
-- copyright:
category:           LambdaCalculus
extra-source-files: CHANGELOG.md

source-repository   head
  type:             git
  location:         https://github.com/damhiya/MetaLambda.git

executable MetaLambda
    main-is:          Main.hs
    other-modules:
      Util
      Syntax
      Typing
      Reduction.Substitution
      Reduction.Evaluation
      Parser.Syntax
      Parser.Lexer
      Parser.Parser
      PrettyPrinter

    build-depends:
      base ^>=4.14.3.0,
      containers,
      text,
      megaparsec,
      Earley,
      prettyprinter,
      haskeline,
      mtl

    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
      OverloadedStrings
      LambdaCase
      MultiParamTypeClasses
      FlexibleInstances
      FlexibleContexts
