cabal-version:      2.4
name:               MetaLambda
version:            0.1.0.0
synopsis:           Contextual Modal Type Theory
description:
  Implementation of Contextual Modal Type Theory[Nanevski et. al. 2008]

bug-reports:        https://github.com/damhiya/MetaLambda
license:            BSD-3-Clause
license-file:       LICENSE
author:             damhiya
maintainer:         damhiya@gmail.com
copyright:          (c) 2022 SoonWon Moon
category:           LambdaCalculus
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/damhiya/MetaLambda.git

library MetaLambdaLib
  hs-source-dirs:     src
  exposed-modules:
    Parser.Lexer
    Parser.Parser
    Parser.Syntax
    PrettyPrinter
    Reduction.Evaluation
    Reduction.Substitution
    Syntax
    Typing
    Util

  build-depends:
    , base           ^>=4.14.3.0
    , containers
    , Earley
    , megaparsec
    , mtl
    , prettyprinter
    , text

  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions:
    FlexibleContexts
    LambdaCase
    OverloadedStrings

executable MetaLambda
  hs-source-dirs:     app
  main-is:            Main.hs
  other-modules:
  build-depends:
    , base           ^>=4.14.3.0
    , containers
    , Earley
    , haskeline
    , megaparsec
    , MetaLambdaLib
    , mtl
    , prettyprinter
    , text

  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    OverloadedStrings

test-suite MetaLambdaTest
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Test.hs
  build-depends:
    , base           ^>=4.14.3.0
    , hspec
    , MetaLambdaLib
    , tasty
    , tasty-hspec
    , text

  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions:
    LambdaCase
    OverloadedStrings
